# Patientia

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
include/: Card.hpp  Game.hpp  Stack.hpp
src/: Card.cpp  Game.cpp  Main.cpp  Stack.cpp
